--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
+
+
+
+
 {
+  
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
     "pg": "^8.7.1",
     "sequelize": "^6.12.0-alpha.1",
     "sequelize-cli": "^6.3.0"
